# Project-Arbiter

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  REVIEW.md  err.txt
.github/workflows/: ci.yml  release.yml
arbiter-app/: Cargo.toml  build.rs
arbiter-app/src/: main.rs  tray.rs
arbiter-bridge/: Cargo.toml
arbiter-bridge/src/: executor.rs  hand.rs  inscribe.rs  lib.rs  protocol.rs  runner.rs  shell.rs
arbiter-core/: Cargo.toml
arbiter-core/src/: atlas.rs  decree.rs  filter.rs  ledger.rs  lib.rs  ordinance.rs  presence.rs  protocol.rs  signet.rs  vigil.rs
arbiter-core/src/vigil/: sys.rs
arbiter-data/: ledger.json  signet.vault
arbiter-forge/: Cargo.toml  build.rs
arbiter-forge/src/: app.rs  main.rs  theme.rs
arbiter-forge/ui/: decree_step.slint  forge.slint  models.slint  ordinance_step.slint  theme.slint  widgets.slint
arbiter-forge/ui/pages/: conservatory.slint  signet.slint
doc/: arbiter_metadata_extraction.md  signet_filter.md
doc/wiki_pages/: Atlas.md  Context-Variables.md  Hand-&-Baton.md  Home.md  Lexicon.md  Pattern-Matching.md  README.md  README.txt  Signet.md  Vigil.md
vassal-app/: Cargo.toml
vassal-app/src/: main.rs  tray.rs
vassal-bridge/: Cargo.toml
vassal-bridge/src/: executor.rs  hand.rs  inscribe.rs  lib.rs  shell.rs
vassal-core/: Cargo.toml
vassal-core/src/: atlas.rs  filter.rs  lib.rs  ordinance.rs  signet.rs  vigil.rs
