[package]
name = "arbiter-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The Servant's entry point — silent tray lifecycle and engine host."

[[bin]]
name = "arbiter"
path = "src/main.rs"

[features]
default = ["presence"]
presence = ["arbiter-core/presence"]

[dependencies]
arbiter-core   = { path = "../arbiter-core", features = ["vigil-fs", "vigil-keys", "signet"] }
arbiter-bridge = { path = "../arbiter-bridge" }
tao           = "0.30"
tray-icon     = "0.19"
tokio         = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs          = "5.0"
windows       = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
tokio-util    = { version = "0.7", features = ["net", "codec"] }
futures       = "0.3"
serde_json    = "1.0"
chrono        = "0.4"
