[package]
name = "arbiter-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The Atlas, Vigil, Presence, and Signet — the deterministic engine core."

[features]
default = []
vigil-fs   = ["dep:notify"]
vigil-keys = ["dep:global-hotkey"]
vigil-sys  = ["dep:sysinfo"]
presence   = ["dep:rdev"]
signet     = ["dep:aes-gcm", "dep:base64", "dep:hostname", "dep:typenum"]

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = { workspace = true }
tracing    = "0.1"
tokio      = { version = "1", features = ["rt", "sync", "macros", "time"] }
regex      = "1"

# Feature: vigil-fs
notify = { version = "6", optional = true }

# Feature: vigil-keys
global-hotkey = { version = "0.6", optional = true }

# Feature: vigil-sys
sysinfo = { version = "0.30", optional = true }

# Feature: presence
rdev  = { version = "0.5", optional = true }

# Feature: signet
aes-gcm = { version = "0.10", optional = true }
base64  = { version = "0.22", optional = true }
hostname = { version = "0.4", optional = true }
typenum  = { version = "1.17", optional = true }
