[package]
name = "arbiter-forge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
arbiter-core = { path = "../arbiter-core", features = [] }
arbiter-bridge = { path = "../arbiter-bridge", features = [] }

eframe = "0.27"
egui = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
