[package]
name = "arbiter-forge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The visual command center for Arbiter."

[dependencies]
arbiter-core = { path = "../arbiter-core", features = ["vigil-fs", "vigil-keys", "signet"] }
arbiter-bridge = { path = "../arbiter-bridge" }

slint = { version = "1.15", features = ["renderer-winit-skia", "image-default-formats"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
tokio-util = { version = "0.7", features = ["net", "codec"] }
futures = "0.3"

[build-dependencies]
slint-build = "1.15"
winres     = "0.1"
