[package]
name = "vassal-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The Servant's entry point — silent tray lifecycle and engine host."

[[bin]]
name = "vassal"
path = "src/main.rs"

[dependencies]
vassal-core   = { path = "../vassal-core", features = ["vigil-fs", "vigil-keys", "presence", "signet"] }
vassal-bridge = { path = "../vassal-bridge" }
tao           = "0.30"
tray-icon     = "0.19"
tokio         = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs          = "5.0"
