[package]
name = "vassal-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The Hand, Inscribe, and Shell — the mechanical execution bridge."

[dependencies]
vassal-core = { path = "../vassal-core" }
enigo       = "0.2"
walkdir     = "2"
regex       = "1"
tracing     = "0.1"
tokio       = { version = "1", features = ["sync", "rt"] }
lazy_static = "1.4"
serde_json  = "1.0"

[dev-dependencies]
tempfile = "3.10"
